initial commit and setup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,10 @@
-<h1>
-  {{title}}
-</h1>
+<aside>
+  <ul>
+    <li><a routerLink="/">Get Started</a></li>
+    <li><a routerLink="/popover">Popover</a></li>
+  </ul>
+</aside>
+
+<main>
+  <router-outlet></router-outlet>
+</main>
