--- a/src/app/ui/popover/popover-container/popover-container.component.scss
+++ b/src/app/ui/popover/popover-container/popover-container.component.scss
@@ -7,6 +7,7 @@
   display: block;
   margin: 5px;
   box-shadow: 2px 2px 5px 2px #7b7b7b;
+  max-width: 300px;
 
   .iw-popover--header {
     background: lightslategray;
