--- a/src/app/ui/popover/popover-container/popover-container.component.scss
+++ b/src/app/ui/popover/popover-container/popover-container.component.scss
@@ -1,11 +1,5 @@
-:host {
+iw-popover-container {
   position: absolute;
   z-index: 3;
-  top: 0;
-  left: 0;
   display: block;
-  background: #eee;
-  margin: 5px;
-  box-shadow: 2px 2px 5px 2px #7b7b7b;
-  max-width: 300px;
 }
