--- a/src/app/ui/popover/popover-scroll-mask/popover-scroll-mask.component.scss
+++ b/src/app/ui/popover/popover-scroll-mask/popover-scroll-mask.component.scss
@@ -1,10 +1,8 @@
-:host {
+iw-popover-scroll-mask {
   z-index: 2;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  opacity: 0.3;
-  background: white;
 }
