feat(stateful-button): add stateful button component and upgrade to latest angular-cli

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     </a></li>
     <li><a routerLinkActive="active-link" routerLink="/popover">Popover</a></li>
     <li><a routerLinkActive="active-link" routerLink="/tooltip">Tooltip</a></li>
+    <li><a routerLinkActive="active-link" routerLink="/stateful-button">Stateful Button</a></li>
   </ul>
 </aside>
 
