--- a/src/app/demo/stateful-button/stateful-button-demo/stateful-button-demo.component.html
+++ b/src/app/demo/stateful-button/stateful-button-demo/stateful-button-demo.component.html
@@ -1,10 +1,51 @@
-<p>
-  <iw-stateful-button [buttonState]="myButtonState">
-    <button (click)="do()">
-      <sb-label-idle>Save</sb-label-idle>
-      <sb-label-doing>Saving</sb-label-doing>
-      <sb-label-success>Saved</sb-label-success>
-      <sb-label-failure>Save failed!</sb-label-failure>
-    </button>
-  </iw-stateful-button>
-</p>
+<h2>
+  Possible States
+</h2>
+
+<iw-stateful-button [buttonState]="'IDLE'">
+  <button disabled>
+    <sb-label-idle>Idle</sb-label-idle>
+    <sb-label-doing>Doing</sb-label-doing>
+    <sb-label-success>Success</sb-label-success>
+    <sb-label-failure>Failure</sb-label-failure>
+  </button>
+</iw-stateful-button>
+
+<iw-stateful-button [buttonState]="'DOING'">
+  <button disabled>
+    <sb-label-idle>Idle</sb-label-idle>
+    <sb-label-doing>Doing</sb-label-doing>
+    <sb-label-success>Success</sb-label-success>
+    <sb-label-failure>Failure</sb-label-failure>
+  </button>
+</iw-stateful-button>
+
+<iw-stateful-button [buttonState]="'SUCCESS'">
+  <button disabled>
+    <sb-label-idle>Idle</sb-label-idle>
+    <sb-label-doing>Doing</sb-label-doing>
+    <sb-label-success>Success</sb-label-success>
+    <sb-label-failure>Failure</sb-label-failure>
+  </button>
+</iw-stateful-button>
+
+<iw-stateful-button [buttonState]="'FAILURE'">
+  <button disabled>
+    <sb-label-idle>Idle</sb-label-idle>
+    <sb-label-doing>Doing</sb-label-doing>
+    <sb-label-success>Success</sb-label-success>
+    <sb-label-failure>Failure</sb-label-failure>
+  </button>
+</iw-stateful-button>
+
+<h2>Standard Behaviour</h2>
+<iw-stateful-button [buttonState]="myButtonState">
+  <button (click)="do()">
+    <sb-label-idle>Save</sb-label-idle>
+    <sb-label-doing>Saving</sb-label-doing>
+    <sb-label-success>Saved</sb-label-success>
+    <sb-label-failure>Save failed!</sb-label-failure>
+  </button>
+</iw-stateful-button>
+
+
