--- a/src/app/demo/tooltip/tooltip-demo/tooltip-demo.component.html
+++ b/src/app/demo/tooltip/tooltip-demo/tooltip-demo.component.html
@@ -10,11 +10,11 @@
 
 <pre>{{tooltipHtml1}}</pre>
 
-<template #tooltipTemplate>
+<ng-template #tooltipTemplate>
   Click to go from {{value}} to {{value+1}}
-</template>
+</ng-template>
 
-<template #tooltipTemplate2>
+<ng-template #tooltipTemplate2>
   Reset to 0
-</template>
+</ng-template>
 
