--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,6 +65,40 @@ iw-tooltip-container {
   }
 }
 
+iw-dialog-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  background: rgba(192, 192, 192, 0.67);
+  transition: opacity 0.5s;
+
+  .dialog-container__content {
+    position: absolute;
+    top: 100px;
+    left: 20%;
+    width: 60%;
+    background: white;
+    max-height: calc(100% - 200px);
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.5s;
+    transform: translateY(-100%);
+    box-shadow: 2px 2px 4px 1px gray;
+  }
+
+  &.iw-dialog-container--visible {
+    opacity: 1;
+    .dialog-container__content {
+      transform: translateY(0);
+    }
+  }
+}
+
 .popover-simple-demo {
   background: lightgrey;
   padding: 10px;
