feat(tooltip, popover, dialog): implement default styles

--- a/src/app/ui/popover/popover-container/popover-container.component.scss
+++ b/src/app/ui/popover/popover-container/popover-container.component.scss
@@ -1,5 +1,8 @@
 iw-popover-container {
   position: absolute;
-  z-index: 3;
+  z-index: 4;
   display: block;
+  background: white;
+  border: 1px solid black;
+  padding: 5px;
 }
