--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,18 +31,11 @@ iw-popover-container.popover-demo {
   padding: 10px;
   opacity: 0;
   transition: opacity 0.2s;
-  
+  border: none;
+
   &.iw-popover-container--visible {
     opacity: 1;
   }
-}
-
-iw-tooltip-container {
-  background: black;
-  font-size: 10px;
-  color: white;
-  padding: 3px 5px;
-  border-radius: 3px;
 }
 
 .iw-popover-arrow-element {
@@ -67,11 +60,6 @@ iw-tooltip-container {
 
 iw-dialog-container {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
   opacity: 0;
   background: rgba(192, 192, 192, 0.67);
   transition: opacity 0.5s;
