--- a/src/app/demo/dialog-demo/dialog-demo/dialog-demo.component.html
+++ b/src/app/demo/dialog-demo/dialog-demo/dialog-demo.component.html
@@ -6,6 +6,6 @@
 <h2>Declarative way</h2>
 <button (click)="openDialog1()">Open a dialog with a template</button>
 
-<ng-template iwDialog #myDialog1="iw-dialog" [escToClose]="true">
+<ng-template iwDialog #myDialog1="iw-dialog" [escToClose]="true" containerClass="double-config-demo">
   <app-my-dialog title="Template Dialog"></app-my-dialog>
 </ng-template>
