feat(tooltip): add containerClass to directive and config can be provided

--- a/src/app/demo/tooltip/tooltip-demo/tooltip-demo.component.html
+++ b/src/app/demo/tooltip/tooltip-demo/tooltip-demo.component.html
@@ -20,3 +20,11 @@
     Set to {{t}}
   </ng-template>
 </button>
+
+<h2>Custom class</h2>
+<button>
+  Custom class
+  <ng-template iwTooltip containerClass="custom-tooltip-container">
+    Set to {{t}}
+  </ng-template>
+</button>
