--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,7 @@
     <li><a routerLinkActive="active-link" routerLink="/tooltip">Tooltip</a></li>
     <li><a routerLinkActive="active-link" routerLink="/stateful-button">Stateful Button</a></li>
     <li><a routerLinkActive="active-link" routerLink="/dialog">Dialog</a></li>
+    <li><a routerLinkActive="active-link" routerLink="/checkbox">Checkbox</a></li>
   </ul>
 </aside>
 
