--- a/src/app/ui/dialog/dialog-container/dialog-container.component.html
+++ b/src/app/ui/dialog/dialog-container/dialog-container.component.html
@@ -2,3 +2,5 @@
 <div class="dialog-container__content">
   <ng-content></ng-content>
 </div>
+
+<div class="dialog-container__focus-trap" iwDialogFocusTrap></div>
