--- a/src/app/ui/dialog/dialog-container/dialog-container.component.scss
+++ b/src/app/ui/dialog/dialog-container/dialog-container.component.scss
@@ -8,6 +8,7 @@ iw-dialog-container {
   opacity: 0;
   background: rgba(192, 192, 192, 0.67);
   transition: opacity 0.5s;
+  outline: none;
 
   .dialog-container__content {
     position: absolute;
